# picon

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  openocd-gdb.cfg
assets/: CMakeLists.txt
cmake/: linux.cmake  pico.cmake
src/: main.cpp
src/config/: config.hpp  convert_custom.cpp  convert_custom.hpp
src/drivers/: sdl.hpp  sh1122.hpp
src/graphics/: accel.hpp  blend.hpp  color.hpp  convert.hpp  convert_custom.hpp  functions.hpp  graphics.hpp  image.hpp
src/graphics/image_formats/: gs4.hpp  gs4_hsmb.hpp
src/math/: point.hpp  rect.hpp
src/pal/pico/: getentropy.cpp  pico.hpp
src/time/: time.hpp
src/utils/: bit_utils.hpp  traits.hpp  types.hpp
tools/image_gs4/: __main__.py
tools/image_importer/: __main__.py
